--- a/BostonHousePrices/boston-house-prices-EDA.ipynb
+++ b/BostonHousePrices/boston-house-prices-EDA.ipynb
@@ -7,8 +7,7 @@
    },
    "source": [
     "# Boston Housing with Linear Regression\n",
-    "\n",
-    "** With this data our objective is create a model using linear regression to predict the houses price  **\n",
+    "**With this data our objective is create a model using linear regression to predict the houses price**\n",
     "\n",
     "The data contains the following columns:\n",
     "* 'crim': per capita crime rate by town.\n",
@@ -24,9 +23,7 @@
     "* 'ptratio': pupil-teacher ratio by town\n",
     "* 'black': 1000(Bk - 0.63)^2 where Bk is the proportion of blacks by town.\n",
     "* 'lstat': lower status of the population (percent).\n",
-    "* 'medv': median value of owner-occupied homes in $$1000s\n",
-    "\n",
-    "Ps: this is my first analysis, i'm learning how to interpret the plots."
+    "* 'medv': median value of owner-occupied homes in $$1000s"
    ]
   },
   {
