Fix name of input file (imported data was right, only the name was wrong)

--- a/HumanActivityRecognition/simple-EDA-of-HAR-WALKING-CURVES.ipynb
+++ b/HumanActivityRecognition/simple-EDA-of-HAR-WALKING-CURVES.ipynb
@@ -176,7 +176,7 @@
    ],
    "source": [
     "# Select a file for the case you want to analyze\n",
-    "dataset = pd.read_csv(\"HAR-data/reference/BRJ-2022-12-1908.09.53-walking-standing-walking-onTable.csv\", delimiter=\";\", decimal=\",\")\n",
+    "dataset = pd.read_csv(\"HAR-data/reference/BRJ-2022-12-1908.05.35-walkingWithCurves.csv\", delimiter=\";\", decimal=\",\")\n",
     "dataset.describe()"
    ]
   },
